unsuccessfully tried to create a button mixin.  Kept receiving error that the color was undefined even though it was properly listed in the variables. Deleted the mixin after spending too much time trying to fix.

--- a/cess/index.css
+++ b/cess/index.css
@@ -1,3 +1,14 @@
+@grey : background: #969696;
+.ctaBtn {
+  background: #00897B;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 24px;
+  line-height: 30px;
+  margin-top: 2.5%;
+  padding: 6px;
+}
 /*
    CSS default reset
    http://meyerweb.com/eric/tools/css/reset/
@@ -235,16 +246,6 @@ nav a {
   background: radial-gradient(698.36px at 50% 50%, #6D6D6D 0%, #363636 59.63%, #282828 100%);
   color: white;
   padding: 10%;
-}
-.ctaBtn {
-  background: #00897B;
-  border: none;
-  border-radius: 10px;
-  color: white;
-  font-size: 24px;
-  line-height: 30px;
-  width: 25%;
-  text-align: center;
 }
 .smaller {
   font-size: 8px;
