--- a/less/main-content.less
+++ b/less/main-content.less
@@ -8,23 +8,15 @@
     padding:  10%;
 }
 
-.cta-top h1 {
-
-}
-
 .ctaBtn {
-	background: #00897B;
-	border: none;
-	border-radius: 10px;
-	color: white;
-	font-size: 24px;
-	line-height: 30px;
-
-}
-
-
-.right-content button {
-
+  background: #00897B;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  font-size: 24px;
+  line-height: 30px;
+  width: 25%;
+  text-align: center;
 }
 
 .smaller {
